--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -22,7 +22,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 1
-
+      - name: Swtich to Linux Containers
+        run: |
+          "C:\Program Files\Docker\Docker\DockerCli.exe" --hlep
+          "C:\Program Files\Docker\Docker\DockerCli.exe" -SwitchLinuxEngine
 
       - name: Start Redis
         run: |
