--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -27,9 +27,10 @@ jobs:
         run: |
           choco install docker-desktop -y
 
-      - name: Swtich to Linux Containers
+      - name: Test Containers
         run: |
-          "C:\Program Files\Docker\Docker\DockerCli.exe" -h
+          "C:\Program Files\Docker\Docker\Docker Desktop.exe"
+          "C:\Program Files\Docker\Docker\DockerCli.exe"
 
       - name: Start Redis
         run: |
