--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -23,16 +23,12 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Install Docker 
+      - name: Install Scoop
         run: |
-          Uninstall-Package -Name docker -ProviderName DockerMSFTProvider
-          Get-VM WinContainerHost | Set-VMProcessor -ExposeVirtualizationExtensions $true
-          Install-Module DockerProvider
-          Install-Package Docker -ProviderName DockerProvider -RequiredVersion preview
-          [Environment]::SetEnvironmentVariable("LCOW_SUPPORTED", "1", "Machine")
-          Restart-Service docker
-          docker version
-          docker pull ubuntu
+          scoop
+          Set-ExecutionPolicy RemoteSigned -scope CurrentUser
+          iwr -useb get.scoop.sh | iex
+          scoop
 
       - name: Start Redis
         run: |
