--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -25,9 +25,9 @@ jobs:
 
       - name: Install Scoop
         run: |
-          scoop
           Set-ExecutionPolicy RemoteSigned -scope CurrentUser
           iwr -useb get.scoop.sh | iex
+          echo $env:USERNAME
           scoop
 
       - name: Start Redis
