--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -33,7 +33,7 @@ jobs:
           scoop install redis
           scoop install minio
           redis-server --service-install --loglevel verbose
-          redis-server --service-start
+          net start redis
           curl  https://repo.jenkins-ci.org/releases/com/sun/winsw/winsw/2.9.0/winsw-2.9.0-net4.exe -o minio-service.exe
           mkdir "C:\tmp"
           echo  "<service>"   >> minio-service.xml
@@ -69,13 +69,7 @@ jobs:
 
       - name: Juicefs Format
         run: |
-          ./juicefs.exe format \
-              --storage minio \
-              --bucket http://127.0.0.1:9000/pics \
-              --access-key minioadmin \
-              --secret-key minioadmin \
-              redis://127.0.0.1:6379/1 \
-              pics
+          ./juicefs.exe format --storage minio --bucket http://127.0.0.1:9000/pics --access-key minioadmin --secret-key minioadmin redis://127.0.0.1:6379/1 pics
 
       - name: Juicefs Mount
         run: |
