--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -32,8 +32,16 @@ jobs:
           scoop install curl
           scoop install redis
           scoop install minio
-          redis-server --service-install --loglevel verbose
-          net start redis
+          curl  https://repo.jenkins-ci.org/releases/com/sun/winsw/winsw/2.9.0/winsw-2.9.0-net4.exe -o redis-service.exe
+          echo  "<service>"   >> redis-service.xml
+          echo  "<id>redisredis</id>"  >> redis-service.xml
+          echo  "<name>redisredis</name>"  >> redis-service.xml
+          echo  "<description>redisredis</description>"  >> redis-service.xml
+          echo  "<executable>C:\Users\$env:USERNAME\scoop\shims\redis-server.exe</executable>"  >> redis-service.xml
+          echo  "<logmode>rotate</logmode>"  >> redis-service.xml
+          echo  "</service>"  >> redis-service.xml
+          .\redis-service.exe install
+          net start redisredis
           curl  https://repo.jenkins-ci.org/releases/com/sun/winsw/winsw/2.9.0/winsw-2.9.0-net4.exe -o minio-service.exe
           mkdir "C:\tmp"
           echo  "<service>"   >> minio-service.xml
