--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -71,10 +71,10 @@ jobs:
           net start MinIO
 
 
-      - name: Unit Test
-        run: |
-          go test -v -cover ./pkg/... ./cmd/...
-          
+      #- name: Unit Test
+      #  run: |
+      #    go test -v -cover ./pkg/... ./cmd/...
+
 
       - name: Build Juicefs
         run: |
@@ -99,3 +99,22 @@ jobs:
           .\juicefs-service.exe install
           net start jfs
 
+      - name: Install Python2
+        run: |
+          choco install python2 -y
+
+      - name: Clone Winfstest
+        run: |
+          Z:
+          mkdir "Z:\tmp"
+          dir
+          cd tmp
+          git clone git@github.com:sanwan/winfstest.git
+          cd winfstest
+
+
+      - name: Build and Test Win
+        run: |
+          msbuild.exe winfstest.sln
+          cd TestSuite
+          .\run-winfstest
