--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -94,6 +94,21 @@ jobs:
           .\juicefs-service.exe install
           net start jfs
 
+      - name: Clone Winfstest
+          run: |
+            mkdir tmp
+            cd tmp
+            git clone git@github.com:sanwan/winfstest.git
+            cd winfstest
+
+
+      - name: Build and Run Winfstest
+        run: |
+          msbuild.exe winfstest.sln
+          cd TestSuite
+          .\run-winfstest
+
+
       - name: Unit Test
         run: |
           go test -v -cover ./pkg/... ./cmd/...
