--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -26,11 +26,11 @@ jobs:
           fetch-depth: 1
 
 
-      #- name: Setup MSBuild.exe
-      #  uses: microsoft/setup-msbuild@v1.0.3
-
       - name: Setup MSBuild.exe
-        uses: warrenbuckley/Setup-MSBuild@v1
+        uses: microsoft/setup-msbuild@v1.0.3
+
+      #- name: Setup MSBuild.exe
+      #  uses: warrenbuckley/Setup-MSBuild@v1
 
       - name: Install WinFsp
         run: |
