change sdk version and repo url

--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Change Winsdk Version
         uses: GuillaumeFalourd/setup-windows10-sdk-action@v1
         with:
-          sdk-version: 10586
+          sdk-version: 18362
 
       #- name: Setup MSBuild.exe
       #  uses: warrenbuckley/Setup-MSBuild@v1
@@ -114,7 +114,7 @@ jobs:
 
       - name: Build and Run Winfstest
         run: |
-          git clone https://github.com/dimov-cz/winfstest.git
+          git clone https://github.com/sanwan/winfstest.git
           cd winfstest
           msbuild.exe winfstest.sln
           cd TestSuite
@@ -132,7 +132,7 @@ jobs:
           mkdir "Z:\tmptmp"
           dir
           cd tmptmp
-          git clone https://github.com/dimov-cz/winfstest.git
+          git clone https://github.com/sanwan/winfstest.git
           cd winfstest
           msbuild.exe winfstest.sln
           cd TestSuite
