install scoop temporary

--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -105,6 +105,8 @@ jobs:
           echo  "<logmode>rotate</logmode>"  >> juicefs-service.xml
           echo  "</service>"  >> juicefs-service.xml
           .\juicefs-service.exe install
+          Set-ExecutionPolicy RemoteSigned -scope CurrentUser
+          iwr -useb get.scoop.sh | iex
           scoop install runasti
           runasti.exe
           net start jfs
