change os version

--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   wintest:
-    runs-on: windows-latest
+    runs-on: windows-2016
     env:
       Actions_Allow_Unsecure_Commands: true
     steps:
