--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install: true
 before_script:
   - export GO111MODULE=on
   - sudo mysql -e "create database dev;"
-  - sudo psql -c 'create database test;' -U postgres
+  - psql -c 'create database test;' -U postgres
   - make
   - sudo make -C fstests setup
 script:
