--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_script:
   - sudo make -C fstests setup
 script:
   - make test
+  - sudo rm -rf ./fstests/secfs.test/
   - sudo DURATION=10 make -C fstests all
   - make -C fstests flock
   - make -C sdk/java/libjfs
