add fsracer to makefile

--- a/fstests/Makefile
+++ b/fstests/Makefile
@@ -1,11 +1,12 @@
 DURATION ?= 10
 
-all: fsx xattrs
+all: fsx xattrs fsracer
 
 xattrs:
 	touch /jfs/test_xattrs
 	setfattr -n user.k -v value /jfs/test_xattrs
 	getfattr -n user.k /jfs/test_xattrs | grep -q user.k=
+	make healthcheck
 
 fsracer: healthcheck secfs.test/tools/bin/fsracer
 	secfs.test/tools/bin/fsracer $(DURATION) /jfs >fsracer.log
