--- a/fstests/Makefile
+++ b/fstests/Makefile
@@ -9,7 +9,7 @@ xattrs:
 	make healthcheck
 
 fsracer: healthcheck secfs.test/tools/bin/fsracer
-	secfs.test/tools/bin/fsracer $(DURATION) /jfs >fsracer.log
+	secfs.test/tools/bin/fsracer $(DURATION) /jfs 
 	make healthcheck
 
 fsx: healthcheck secfs.test/tools/bin/fsx
