--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ script:
   - sudo DURATION=10 make -C fstests all
   - sudo rm -rf ./fstests/secfs.test/
   - sudo DURATION=10 make -C fstests fsracer
+  - sudo DURATION=10 make -C fstests fsracer
   - make -C fstests flock
   - make -C sdk/java/libjfs
   - cd sdk/java
