--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ script:
   - sudo chmod 777 /jfs/tmp
   - sudo `which mvn` test -B
   - sudo `which mvn` package -B -Dmaven.test.skip=true --quiet || sudo `which mvn` package -B -Dmaven.test.skip=true --quiet  
+  - sudo `which mvn` cobertura:cobertura
   - cd ../../
   - sudo ./juicefs umount /jfs || sudo lsof /jfs && sudo ./juicefs umount --force /jfs || true
   - sudo ./juicefs gc localhost
