--- a/sdk/java/pom.xml
+++ b/sdk/java/pom.xml
@@ -109,6 +109,13 @@
 	</build>
 	<dependencies>
 		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>org.jacoco.agent</artifactId>
+			<classifier>runtime</classifier>
+			<version>0.8.7</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.github.jnr</groupId>
 			<artifactId>jnr-ffi</artifactId>
 			<version>2.1.11</version>
