--- a/pkg/meta/metadata.sample
+++ b/pkg/meta/metadata.sample
@@ -13,10 +13,10 @@
     "Inodes": 0
   },
   "Counters": {
-    "usedSpace": 16384,
-    "usedInodes": 4,
-    "nextInodes": 6,
-    "nextChunk": 5,
+    "usedSpace": 104873984,
+    "usedInodes": 5,
+    "nextInodes": 7,
+    "nextChunk": 7,
     "nextSession": 1,
     "nextCleanupSlices": 0
   },
@@ -27,7 +27,15 @@
     "entries": {
       "d1": {
         "attr": {"inode":3,"type":"directory","mode":493,"uid":501,"gid":20,"atime":1623746591,"mtime":1623746610,"ctime":1623746610,"atimensec":959224000,"mtimensec":959224000,"ctimensec":959224000,"nlink":2,"length":0},
+        "xattrs": [{"name":"dk","value":"dv"}],
         "entries": {
+          "big": {
+            "attr": {"inode":6,"type":"regular","mode":420,"uid":501,"gid":0,"atime":1637150857,"mtime":1637150858,"ctime":1637150878,"atimensec":961503000,"mtimensec":961503000,"ctimensec":961503000,"nlink":1,"length":104857600},
+            "chunks": [
+              {"index":0,"slices":[{"chunkid":5,"pos":0,"size":67108864,"off":0,"len":67108864}]},
+              {"index":1,"slices":[{"chunkid":6,"pos":0,"size":37748736,"off":0,"len":37748736}]}
+            ]
+          },
           "f11": {
             "attr": {"inode":4,"type":"regular","mode":420,"uid":501,"gid":20,"atime":1623746610,"mtime":1623746610,"ctime":1623746639,"atimensec":591590000,"mtimensec":591590000,"ctimensec":591590000,"nlink":2,"length":12},
             "chunks": [{"index":0,"slices":[{"chunkid":2,"pos":0,"size":12,"off":0,"len":12}]}]
