ignore modify docs

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,9 +14,14 @@ name: "CodeQL"
 on:
   push:
     branches: [ main ]
-  #pull_request:
-    #The branches below must be a subset of the branches above
-    #branches: [ main ]
+    paths:
+      - '!docs/**'
+      - '!**.md'
+  pull_request:
+    branches: [ main ]
+    paths:
+      - '!docs/**'
+      - '!**.md'
   schedule:
     - cron: '28 20 * * 0'
 
