--- a/.github/workflows/wintest.yml
+++ b/.github/workflows/wintest.yml
@@ -3,9 +3,15 @@ name: "test jfs on windows"
 on:
   push:
     branches: [ main ]
+    paths:
+      - '!docs/**'
+      - '!**.md'
   pull_request:
     #The branches below must be a subset of the branches above
     branches: [ main ]
+    paths:
+      - '!docs/**'
+      - '!**.md'
 
 
 
