--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -4,10 +4,9 @@ on:
   push:
     branches:
       - main
-    paths:
-      - '**.go'
-      - '!docs/**'
-      - '!**.md'
+    paths-ignore:
+      - 'docs/**'
+      - '**.md'
   pull_request:
     branches:
       - main
